Add certificates/hobbies block

--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
             <h3 class="contact-info__sub-header">Full-Stack Developer</h3>
 
             <div class="contact_info_container fh">
-              <div class="contact-info__block"></div>
-
               <div class="contact-info__block contact-info__block--center">
                 <img class="contact-info__avatar" src="assets/avatar.jpg" alt="Avatar" />
               </div>
+              <div class="contact-info__block"></div>
 
               <div class="contact-info__block">
                 <a href="" rel="author" class="contact-info__item">
@@ -149,6 +148,48 @@
             </div>
           </div>
         </div>
+
+        <!-- Additional content starts here -->
+        <div class="container">
+          <div class="resume__block">
+            <div class="certificates">
+              <h3 class="certificates__header">Certificates</h3>
+              <ul class="certificates__list">
+                <li class="certificates__item">
+                  <a href="assets/Coursera JavaScript.pdf" target="_blank">Coursera JavaScript</a>
+                </li>
+                <li class="certificates__item">
+                  <a href="assets/Coursera Front-end.pdf" target="_blank">Coursera Front-end</a>
+                </li>
+                <li class="certificates__item">
+                  <a href="assets/Coursera Java Parallel.pdf" target="_blank"
+                    >Coursera Java Parallel</a
+                  >
+                </li>
+                <li class="certificates__item">
+                  <a
+                    href="assets/Coursera Microsoft Azure Management Tools and Security Solutions.pdf"
+                    target="_blank"
+                    >Coursera Microsoft Azure Management Tools and Security Solutions</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="resume__block">
+            <div class="hobbies">
+              <h3 class="hobbies__header">Hobbies</h3>
+              <p class="hobbies__text">
+                I am interested in programming, love reading books, and am interested in economics
+                and art. I also like games. These hobbies help me be a generalist and maintain a
+                work-life balance.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- Additional content ends here -->
       </div>
     </main>
   </body>
