--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    ― Hello World! &#x1F609;
     <main>
       <div class="resume">
         <div class="container">
